# nuclei-sdk

./: .gitignore  .goreleaser.yaml  LICENSE  README.md  RELEASE.md  auth.go  auth_test.go  config.go  config_nuclei.go  config_nuclei_test.go  engine.go  engine_test.go  go.mod  options.go  pool.go  preset.go  preset_api.go  preset_network.go  preset_web.go  preset_wordpress.go  result.go  result_test.go  scan_options.go  scan_options_test.go  scanner.go  target.go  template.go
.github/workflows/: release-binary.yml  release-python.yml
cmd/nuclei-sdk-bridge/: main.go  protocol.go  protocol_test.go
docs/: GOLANG-SDK.md  PYTHON-SDK.md
examples/api_security/: main.go
examples/basic/: main.go
examples/concurrent/: main.go
examples/custom_config/: main.go
examples/raw_template/: main.go
examples/reusable_engine/: main.go
examples/scan_pool/: main.go
examples/targeted_scan/: main.go
examples/wordpress/: main.go
python/: README.md  pyproject.toml
python/examples/: auto_install.py  basic_scan.py  callback_pool.py  scan_pool.py
python/nucleisdk/: __init__.py  _bridge.py  _installer.py  auth.py  engine.py  models.py  pool.py  presets.py  targets.py  templates.py
python/tests/: test_installer.py  test_models.py
